--- a/informacion/Base.lproj/Main.storyboard
+++ b/informacion/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5cN-Ku-6yF">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,154 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="informacion" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DWg-o3-qQ6">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="celdaContacto" rowHeight="145" id="Shi-yy-pvI" customClass="CeldaContactoController" customModule="informacion" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="145"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Shi-yy-pvI" id="vc1-1n-m5j">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="144.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2IG-81-CQK">
+                                                    <rect key="frame" x="148" y="19" width="94" height="33"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bt6-jm-sl5">
+                                                    <rect key="frame" x="20" y="19" width="120" height="107"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="120" id="Zze-ve-WaO"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Telefono" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NCA-Ex-doa">
+                                                    <rect key="frame" x="148" y="62" width="66" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="bt6-jm-sl5" secondAttribute="bottom" constant="8" id="SxD-Ch-EJO"/>
+                                                <constraint firstItem="bt6-jm-sl5" firstAttribute="top" secondItem="vc1-1n-m5j" secondAttribute="topMargin" constant="8" id="WFI-TN-60B"/>
+                                                <constraint firstItem="2IG-81-CQK" firstAttribute="top" secondItem="vc1-1n-m5j" secondAttribute="topMargin" constant="8" id="amz-vd-8Y9"/>
+                                                <constraint firstItem="NCA-Ex-doa" firstAttribute="leading" secondItem="bt6-jm-sl5" secondAttribute="trailing" constant="8" id="fXV-IP-vOx"/>
+                                                <constraint firstItem="2IG-81-CQK" firstAttribute="leading" secondItem="bt6-jm-sl5" secondAttribute="trailing" constant="8" id="lA2-mb-tOw"/>
+                                                <constraint firstItem="bt6-jm-sl5" firstAttribute="leading" secondItem="vc1-1n-m5j" secondAttribute="leadingMargin" id="vS5-IE-Mww"/>
+                                                <constraint firstItem="NCA-Ex-doa" firstAttribute="top" secondItem="2IG-81-CQK" secondAttribute="bottom" constant="10" id="xnD-Yx-MtU"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imgFoto" destination="bt6-jm-sl5" id="hYX-PQ-uWO"/>
+                                            <outlet property="lblNombre" destination="2IG-81-CQK" id="LS8-ZO-hZf"/>
+                                            <outlet property="lblTelefono" destination="NCA-Ex-doa" id="um4-Hm-5nl"/>
+                                            <segue destination="qXn-w9-bD8" kind="show" identifier="goToEditar" id="4f1-XB-NMr"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="TXj-PB-8ki"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="rkB-6U-oDx"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="DWg-o3-qQ6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="DhF-Bt-NWG"/>
+                            <constraint firstItem="DWg-o3-qQ6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GIw-Sj-q4G"/>
+                            <constraint firstItem="DWg-o3-qQ6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QbA-sp-dOf"/>
+                            <constraint firstItem="DWg-o3-qQ6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Z2X-2r-3Lt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="j92-Nu-3zi"/>
+                    <connections>
+                        <outlet property="tvContactos" destination="DWg-o3-qQ6" id="PBN-t0-uFl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="592.75362318840587" y="126.5625"/>
+        </scene>
+        <!--Editar Contacto Controller-->
+        <scene sceneID="tU7-oQ-jja">
+            <objects>
+                <viewController id="qXn-w9-bD8" customClass="EditarContactoController" customModule="informacion" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="leX-QG-CfB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hU9-XT-RCP">
+                                <rect key="frame" x="20" y="128" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="jyb-yl-TSc"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OHz-5d-LDV">
+                                <rect key="frame" x="20" y="166" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Qwm-pN-H58"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ch-HA-rer">
+                                <rect key="frame" x="343" y="204" width="56" height="30"/>
+                                <state key="normal" title="Guardar"/>
+                                <connections>
+                                    <action selector="doTapGuardar:" destination="qXn-w9-bD8" eventType="touchUpInside" id="6Mk-AL-sWx"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hU9-XT-RCP" firstAttribute="leading" secondItem="2y7-cl-oaj" secondAttribute="leading" constant="20" id="5Z2-LL-POd"/>
+                            <constraint firstItem="OHz-5d-LDV" firstAttribute="top" secondItem="hU9-XT-RCP" secondAttribute="bottom" constant="8" id="F8J-ME-LYP"/>
+                            <constraint firstItem="7ch-HA-rer" firstAttribute="top" secondItem="OHz-5d-LDV" secondAttribute="bottom" constant="8" id="SHn-lk-xxf"/>
+                            <constraint firstItem="2y7-cl-oaj" firstAttribute="trailing" secondItem="hU9-XT-RCP" secondAttribute="trailing" constant="20" id="YYn-7c-4IE"/>
+                            <constraint firstItem="2y7-cl-oaj" firstAttribute="trailing" secondItem="7ch-HA-rer" secondAttribute="trailing" constant="15" id="a2i-rV-cSD"/>
+                            <constraint firstItem="2y7-cl-oaj" firstAttribute="trailing" secondItem="OHz-5d-LDV" secondAttribute="trailing" constant="20" id="flq-E9-t1T"/>
+                            <constraint firstItem="hU9-XT-RCP" firstAttribute="top" secondItem="2y7-cl-oaj" secondAttribute="top" constant="40" id="i3Z-x1-PUb"/>
+                            <constraint firstItem="OHz-5d-LDV" firstAttribute="leading" secondItem="2y7-cl-oaj" secondAttribute="leading" constant="20" id="nZ5-O4-A5C"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2y7-cl-oaj"/>
+                    </view>
+                    <connections>
+                        <outlet property="txtNombre" destination="hU9-XT-RCP" id="fLy-kb-qxF"/>
+                        <outlet property="txtTelefono" destination="OHz-5d-LDV" id="kcs-5c-9t4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cVh-fq-miN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1430.4347826086957" y="126.5625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="rNG-KG-KPz">
+            <objects>
+                <navigationController id="5cN-Ku-6yF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="z4N-BS-D9P">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="aBN-Qr-2qf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GbK-Re-K3Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-372" y="127"/>
         </scene>
     </scenes>
 </document>
