--- a/informacion/Base.lproj/Main.storyboard
+++ b/informacion/Base.lproj/Main.storyboard
@@ -81,7 +81,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="j92-Nu-3zi"/>
+                    <navigationItem key="navigationItem" id="j92-Nu-3zi">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="0I6-c7-GBU">
+                            <connections>
+                                <action selector="doTapAgregar:" destination="BYZ-38-t0r" id="pKe-Az-hrq"/>
+                                <segue destination="82q-gJ-B7j" kind="show" identifier="goToAgregar" id="kxh-0x-maW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tvContactos" destination="DWg-o3-qQ6" id="PBN-t0-uFl"/>
                     </connections>
@@ -144,7 +151,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cVh-fq-miN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1430.4347826086957" y="126.5625"/>
+            <point key="canvasLocation" x="1429" y="127"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rNG-KG-KPz">
@@ -161,6 +168,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GbK-Re-K3Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-372" y="127"/>
+        </scene>
+        <!--Agregar Contacto Controller-->
+        <scene sceneID="Yux-pG-DgC">
+            <objects>
+                <viewController id="82q-gJ-B7j" customClass="AgregarContactoController" customModule="informacion" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="udb-d9-ee1">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tPS-F3-Mqw">
+                                <rect key="frame" x="20" y="128" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="TiC-2M-dde"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TfW-tg-3Nn">
+                                <rect key="frame" x="20" y="166" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="E5S-L4-qSg"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKF-ed-eh5">
+                                <rect key="frame" x="343" y="204" width="56" height="30"/>
+                                <state key="normal" title="Guardar"/>
+                                <connections>
+                                    <action selector="doTapGuardar:" destination="82q-gJ-B7j" eventType="touchUpInside" id="kf9-Qq-ZeQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TfW-tg-3Nn" firstAttribute="top" secondItem="tPS-F3-Mqw" secondAttribute="bottom" constant="8" id="1IO-rq-h8h"/>
+                            <constraint firstItem="TfW-tg-3Nn" firstAttribute="leading" secondItem="ecs-1V-wgU" secondAttribute="leading" constant="20" id="1oh-3x-l1y"/>
+                            <constraint firstItem="ecs-1V-wgU" firstAttribute="trailing" secondItem="oKF-ed-eh5" secondAttribute="trailing" constant="15" id="8Gd-Rt-PBO"/>
+                            <constraint firstItem="tPS-F3-Mqw" firstAttribute="top" secondItem="ecs-1V-wgU" secondAttribute="top" constant="40" id="DNE-i3-0TY"/>
+                            <constraint firstItem="ecs-1V-wgU" firstAttribute="trailing" secondItem="tPS-F3-Mqw" secondAttribute="trailing" constant="20" id="EyV-8Y-cNe"/>
+                            <constraint firstItem="oKF-ed-eh5" firstAttribute="top" secondItem="TfW-tg-3Nn" secondAttribute="bottom" constant="8" id="WPl-eo-Npe"/>
+                            <constraint firstItem="ecs-1V-wgU" firstAttribute="trailing" secondItem="TfW-tg-3Nn" secondAttribute="trailing" constant="20" id="sA6-wQ-TWS"/>
+                            <constraint firstItem="tPS-F3-Mqw" firstAttribute="leading" secondItem="ecs-1V-wgU" secondAttribute="leading" constant="20" id="sxP-cg-vy9"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ecs-1V-wgU"/>
+                    </view>
+                    <connections>
+                        <outlet property="lblNombre" destination="tPS-F3-Mqw" id="Lwl-f8-Mw4"/>
+                        <outlet property="lblTelefono" destination="TfW-tg-3Nn" id="RIP-d0-vWT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ofx-fI-L8i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1429" y="-545"/>
         </scene>
     </scenes>
 </document>
